lab1/Test/L1-A-13-98.output
Error Type B at Line 1
Error Type A at Line 8
Error Type B at Line 11
Error Type B at Line 19
Error Type B at Line 23
Error Type B at Line 30
Error Type A at Line 31
Error Type B at Line 33
Error Type B at Line 40
